--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel_local
-DB_USERNAME=tennis-circle
-DB_PASSWORD=daikichi852
+DB_USERNAME=root
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -35,10 +35,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIAWKD73QOAUODVLSFP
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-northeast-1
+AWS_BUCKET=tennis-circle
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
