--- a/infra/mysql/Dockerfile
+++ b/infra/mysql/Dockerfile
@@ -1,9 +1,9 @@
 FROM mysql:8.0
 
 ENV MYSQL_DATABASE=laravel_local \
-  MYSQL_USER=tennis-circle \
-  MYSQL_PASSWORD=daikichi852 \
-  MYSQL_ROOT_PASSWORD=daikichi852 \
+  MYSQL_USER=root \
+  MYSQL_PASSWORD=secret \
+  MYSQL_ROOT_PASSWORD=secret \
   TZ=Asia/Tokyo
 
 COPY ./my.cnf /etc/mysql/conf.d/my.cnf
