--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,10 +35,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=AKIAWKD73QOAUODVLSFP
-AWS_SECRET_ACCESS_KEY=K4BlpVk4TEUBwxsv5Eiu3zIEgqoILCvJ+tbJeot6
-AWS_DEFAULT_REGION=ap-northeast-1
-AWS_BUCKET=tennis-circle
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
