--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,10 +9,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=laravel_local
-DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
